# AllInOneToolkitV2

./: .gitignore  .prettierrc  Dockerfile  FLATPAK_UPDATE_SYSTEM.md  README.md  angular.json  build-optimized.sh  com.tcs.allinonetoolkitv2.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: android.yml  flatpak.yml  github-releases-to-discord.yml  ios.yml  linux.yml  macos.yml  main.yml  windows.yml
flatpak/: README.md  build.sh  com.tcs.allinonetoolkitv2.local.yml  com.tcs.allinonetoolkitv2.metainfo.xml  com.tcs.allinonetoolkitv2.yml
scripts/: README.md  build-optimized.cmd  build-optimized.sh  build-tauri-appimage-arch.sh  sync-versions.sh
src/: custom-theme.scss  index.html  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/controllers/: about.controller.rs  about.rs  about_controller.rs  manage_file.controller.rs  manage_file.rs  manage_xls.controller.rs  manage_xls.rs  manage_xls_controller.rs  math.controller.rs  mod.rs  unicode.controller.rs  unicode.rs  unicode_controller.rs  url_requests.controller.rs  url_requests.rs  url_requests_controller.rs  virus_total.controller.rs  virus_total.rs
src-tauri/src/helpers/: common.rs  config.helper.rs  mod.rs
src-tauri/src/models/: collection_data.rs  mod.rs  request_data.rs  response.model.rs  response.rs  unicode_data.rs
src-tauri/src/routes/: about.route.rs  manage_file.route.rs  manage_file_route.rs  manage_xls.route.rs  math.route.rs  mod.rs  unicode.route.rs  url_requests.route.rs  url_requests_route.rs  virus_total.route.rs  virus_total_route.rs
src-tauri/src/services/: about.rs  about.service.rs  manage_file.rs  manage_file.service.rs  manage_file_service.rs  manage_xls.rs  manage_xls.service.rs  manage_xls_service.rs  math.service.rs  mod.rs  unicode.rs  unicode.service.rs  url_requests.rs  url_requests.service.rs  url_requests_service.rs  virus_total.rs  virus_total.service.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts  app.ts
src/app/helpers/: common.ts
src/app/models/: catalog.ts  collection.ts  link.ts  request.ts  response.ts  table-data.ts  undo_item.ts
src/app/services/: about.service.ts  file.service.ts  links.service.ts  math.service.ts  notify.service.ts  recent-links.service.ts  unicode-converter.service.ts  (+2 more)
src/environments/: environment.ts
(+164 files in other folders)
