[package]
name = "allinonetoolkitv2"
version = "0.4.0"
description = "All In One Toolkit v2.0"
authors = ["Dmitriy303"]
license = "MIT License"
repository = "https://github.com/rusnakdima/AllInOneToolkitV2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "allinonetoolkitv2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "1.5.2", features = ["std"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2.0.1"
chrono = "0.4.38"
opener = "0.7.2"
rust_xlsxwriter = "0.79.0"
calamine = "0.26.1"
dotenv = "0.15.0"
encoding_rs = "0.8.35"
roxmltree = "0.20.0"
