[package]
authors = ["Dmitriy303"]
description = "All In One Toolkit v2.0"
edition = "2021"
license = "MIT License"
name = "allinonetoolkitv2"
repository = "https://github.com/rusnakdima/AllInOneToolkitV2"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "allinonetoolkitv2_lib"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
calamine = "0.26.1"
chrono = "0.4.38"
dotenv = "0.15.0"
dotenvy = "0.15.7"
encoding_rs = "0.8.35"
indexmap = {version = "1.5.2", features = ["std"] }
opener = "0.7.2"
tokio = { version = "1", features = ["io-util"] }
roxmltree = "0.20.0"
rust_xlsxwriter = "0.79.0"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = {version = "2.0.1", features = ['json'] }
tauri-plugin-shell = "2"
